Added the prices stuff

--- a/SEG3125-Module2-Grocery/styles.css
+++ b/SEG3125-Module2-Grocery/styles.css
@@ -161,6 +161,13 @@
   display: none !important;
 }
 
+.leftDiv {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 250px;
+}
+
 .listitem {
   display: flex;
   flex-direction: row;
